syntax = "proto3";
package common;
option go_package = "github.com/Layr-Labs/eigenda/api/grpc/common";

message G1Commitment {
	// The X coordinate of the KZG commitment. This is the raw byte representation of the field element.
	bytes x = 1;
	// The Y coordinate of the KZG commitment. This is the raw byte representation of the field element.
	bytes y = 2;
}

/////////////////////////////////////////////////////////////////////////////////////////////////
// Messages for WIP RPCs. These are subject to change, do not consider these to be stable API. //
/////////////////////////////////////////////////////////////////////////////////////////////////

// A chunk of a blob.
message ChunkData {
	bytes data = 1;
}